feat: Add REST Controller for /api/cities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=world123
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+spring.mvc.problemdetails.enabled=true
