--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.mvc.problemdetails.enabled=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs/ui
