docs: Add readme

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>demo-spring-boot-rest-openapi</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot + REST API + OpenAPI support</description>
 	<url/>
 	<licenses>
 		<license/>
