feat: Configure CORS for external Swagger UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.mvc.problemdetails.enabled=true
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/api-docs/ui
+
+custom.external-swagger-ui.cors.allowed-origins=http://localhost:8090
