--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.jpa.show-sql=true
 
 spring.mvc.problemdetails.enabled=true
 
+springdoc.api-docs.enabled=true
+springdoc.api-docs.version=openapi-3-1
 springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/api-docs/ui
+springdoc.swagger-ui.try-it-out-enabled=true
 
 custom.external-swagger-ui.cors.allowed-origins=http://localhost:8090
