chore: Add property 'spring.jpa.database' to enable to start without database connected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5442/world-db
 spring.datasource.username=world
 spring.datasource.password=world123
 
+spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
