feat: Upgrade to springdoc-openapi 3.0.0-RC1

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<properties>
 		<java.version>21</java.version>
 
-        <springdoc-openapi.version>3.0.0-M1</springdoc-openapi.version>
+        <springdoc-openapi.version>3.0.0-RC1</springdoc-openapi.version>
     </properties>
 
 	<dependencyManagement>
