--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,12 @@
             <artifactId>spring-boot-starter-webmvc</artifactId>
         </dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
