--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,12 @@ spring.jpa.show-sql=true
 
 spring.mvc.problemdetails.enabled=true
 
+# expose specific endpoints (actuator)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-components=always
+management.info.java.enabled=true
+management.info.os.enabled=true
+
 springdoc.api-docs.enabled=true
 springdoc.api-docs.version=openapi-3-1
 springdoc.api-docs.path=/api-docs
